This version contains the definition of a new OPEN list, which consists of a 1-bucket of vector-lists. It has been thoroughly tested over maps with Google Test.
However, the search algorithms do not use it yet!

--- a/Makefile.am
+++ b/Makefile.am
@@ -44,6 +44,7 @@ nobase_libksearch_include_HEADERS = ksearch.h \
 				src/KHSdefs.h \
 				src/KHSinit.h \
 				src/structs/KHSbucketvd_t.h \
+				src/structs/KHSbucketvl_t.h \
 				src/structs/KHSbucketvd_seq_t.h \
 				src/structs/KHSnode_t.h \
 				src/structs/KHSmnode_t.h \
