--- a/Makefile.in
+++ b/Makefile.in
@@ -375,11 +375,13 @@ nobase_libksearch_include_HEADERS = ksearch.h \
 				src/structs/KHSbucketvl_t.h \
 				src/structs/KHSnode_t.h \
 				src/structs/KHSmnode_t.h \
+				src/structs/KHSfmnode_t.h \
 				src/structs/KHSset_t.h \
 				src/algorithm/KHSsolver.h \
 				src/algorithm/KHSmsolver.h \
 				src/algorithm/KHSmhsolver.h \
-				src/algorithm/KHSlazymsolver.h
+				src/algorithm/KHSlazymsolver.h \
+				src/algorithm/KHSgdlazymsolver.h 
 
 libksearch_libincludedir = $(libdir)/libksearch-$(LIBKSEARCH_API_VERSION)/include
 nodist_libksearch_libinclude_HEADERS = libksearchconfig.h
