Definition of nodes
Nodes are the structures used by a search algorithm, i.e., they contain
the vertices as defined in the graph and other additional information. A
basic definition of a node is provided, and a second one, backnode_t is
given to be used in the implementation of m-A*

Both structs are tested with Unit Tests under Google Test

--- a/src/ksearch.h.in
+++ b/src/ksearch.h.in
@@ -18,29 +18,27 @@
 
 // ***initialization ***
 #include "KHSdefs.h"
-#include "KHSinit.h"
 
 // *** data structures
 
 // --- node
 #include "structs/KHSnode_t.h"
-#include "structs/KHSmnode_t.h"
-#include "structs/KHSfmnode_t.h"
+#include "structs/KHSbacknode_t.h"
 
-// --- open list
-#include "structs/KHSbucketvd_t.h"
-#include "structs/KHSbucketvl_t.h"
+// // --- open list
+// #include "structs/KHSbucketvd_t.h"
+// #include "structs/KHSbucketvl_t.h"
 
-// --- closed list
-#include "structs/KHSset_t.h"
+// // --- closed list
+// #include "structs/KHSset_t.h"
 
-// *** search algorithms
+// // *** search algorithms
 
-// --- base definition
-#include "algorithm/KHSsolver.h"
+// // --- base definition
+// #include "algorithm/KHSsolver.h"
 
-// m-Dijkstra
-#include "algorithm/KHSmsolver.h"
+// // m-Dijkstra
+// #include "algorithm/KHSmsolver.h"
 
 #endif // _KSEARCH_H_
 
