Definition of closed lists
Even if this changetset contains the structure for testing closed lists,
it only performs the basic test (that just created closed lists are
empty by default). The reason is that closed lists have to be tested
with true domains but none is implemented yet

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -4,18 +4,10 @@ find_package(GTest REQUIRED)
 add_executable(gtest
   gtest.cc
   TSThelpers.cc
-  # ../domains/n-puzzle/npuzzle_t.cc
   structs/TSTnode_t.cc
   structs/TSTbacknode_t.cc
-  structs/TSTbucket_t.cc)
-  # structs/TSTclosed_t.cc
-  # structs/TSTclassical_perimeter_t.cc
-  # structs/TSTcompressed_perimeter_t.cc
-  # structs/TSTsolution_t.cc
-  # structs/TSTsolutions_t.cc
-  # domains/TSTnpuzzle.cc
-  # algorithm/TSTida.cc
-  # algorithm/TSTbida.cc)
+  structs/TSTbucket_t.cc
+  structs/TSTclosed_t.cc)
 
 target_link_libraries(gtest LINK_PUBLIC ksearch GTest::gtest GTest::gtest_main)
 
