Unit tests of the N-Pancake

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -7,6 +7,8 @@ add_executable(gtest
   structs/TSTnode_t.cc
   structs/TSTbacknode_t.cc
   structs/TSTbucket_t.cc
+  ../domains/n-pancake/npancake_t.cc
+  domains/TSTnpancake.cc
   structs/TSTclosed_t.cc)
 
 target_link_libraries(gtest LINK_PUBLIC ksearch GTest::gtest GTest::gtest_main)
