Definition of ksolution_t
ksolution_t stores the solutions of an instance of the k-shortest path
problem. It is defined as a simple container of instances of solution_t.

This changeset contains unit tests for testing ksolution_t

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -5,7 +5,8 @@ add_library (ksearch
   structs/KHSnode_t.h
   structs/KHSbacknode_t.h
   structs/KHSbucket_t.h
-  structs/KHSsolution_t.h)
+  structs/KHSsolution_t.h
+  structs/KHSksolution_t.h)
 
 # Generate the main header file from its template
 configure_file(ksearch.h.in ./ksearch.h)
