--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -10,7 +10,8 @@ add_executable(gtest
   ../domains/n-pancake/npancake_t.cc
   domains/TSTnpancake.cc
   structs/TSTclosed_t.cc
-  structs/TSTsolution_t.cc)
+  structs/TSTsolution_t.cc
+  structs/TSTksolution_t.cc)
 
 target_link_libraries(gtest LINK_PUBLIC ksearch GTest::gtest GTest::gtest_main)
 
