Additional files of mA*

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -6,7 +6,8 @@ add_library (ksearch
   structs/KHSbacknode_t.h
   structs/KHSbucket_t.h
   structs/KHSsolution_t.h
-  structs/KHSksolution_t.h)
+  structs/KHSksolution_t.h
+  algorithm/KHSmA.h)
 
 # Generate the main header file from its template
 configure_file(ksearch.h.in ./ksearch.h)
