Preparation of unit tests for BELA*
The class implementing BELA* is provided in this text though its
implementation is barely started. To ease its implementation, unit tests
are being developed for testing small parts of it. This changeset
contains a procedure for populating a closed list in a simple
domain (simplegrid_t) which shall be used in the development of BELA*

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -8,7 +8,8 @@ add_library (ksearch
   structs/KHSbucket_t.h
   structs/KHSsolution_t.h
   structs/KHSksolution_t.h
-  algorithm/KHSmA.h)
+  algorithm/KHSmA.h
+  algorithm/KHSbela.h)
 
 # Generate the main header file from its template
 configure_file(ksearch.h.in ./ksearch.h)
