Preliminary implementation of a generic solver
This changeset provides a preliminary implementation of a generic solver
for the N-pancake domain. Still, there are a good number of features to
add but in the meantime, this version can be used to start any solver
over a selection of pancake instances.

Results show an outstanding difference in performance wrt mA*

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -8,6 +8,7 @@ add_library (ksearch
   structs/KHSbucket_t.h
   structs/KHSsolution_t.h
   structs/KHSksolution_t.h
+  algorithm/KHSbsolver.h
   algorithm/KHSmA.h
   algorithm/KHSbela.h)
 
