Definition of graph_t
This changeset contains a definition of graphs as defined in the 9th
DIMACS competition. It also contains a few unit tests

--- a/domains/roadmap/CMakeLists.txt
+++ b/domains/roadmap/CMakeLists.txt
@@ -2,7 +2,7 @@ add_executable (roadmap
   getopt1.c
   getopt.c
   ../helpers.cc
-  # grid_t.cc
+  graph_t.cc
   roadmap.cc)
 
-target_link_libraries (grid LINK_PUBLIC ksearch)
+target_link_libraries (roadmap LINK_PUBLIC ksearch)
