Definition of the roadmap_t state
This definition comes with a number of unit tests which just simply
ensure that graphs randomly generated are correctly loaded into memory

--- a/domains/roadmap/CMakeLists.txt
+++ b/domains/roadmap/CMakeLists.txt
@@ -3,6 +3,7 @@ add_executable (roadmap
   getopt.c
   ../helpers.cc
   graph_t.cc
+  roadmap_t.cc
   roadmap.cc)
 
 target_link_libraries (roadmap LINK_PUBLIC ksearch)
