Integration of K* code

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -8,7 +8,7 @@ add_library (ksearch
   structs/KHSbucket_t.h
   structs/KHSsolution_t.h
   structs/KHSksolution_t.h
-  structs/IBaseNode.h
+  structs/KHSIBaseNode.h
   algorithm/KHSbsolver.h
   algorithm/KHSmA.h
   algorithm/KHSbela.h
