changed all locations with authorship to include my name, also modified signatures of the solvers

--- a/src/ksearch.h.in
+++ b/src/ksearch.h.in
@@ -4,7 +4,7 @@
 //
 // Started on <lun 07-08-2023 13:53:29.565134107 (1691409209)>
 // Carlos Linares López <carlos.linares@uc3m.es>
-//
+// Ian Herman <iankherman@gmail.com>   Ian Herman <iankherman@gmail.com>
 
 //
 // Main include file
