Generator for the map domain

--- a/domains/maps/CMakeLists.txt
+++ b/domains/maps/CMakeLists.txt
@@ -6,3 +6,11 @@ add_executable (map
   map.cc)
 
 target_link_libraries (map LINK_PUBLIC ksearch)
+
+add_executable (generator
+  getopt1.c
+  getopt.c
+  map_t.cc
+  generator.cc)
+
+target_link_libraries (generator LINK_PUBLIC ksearch)
