--- a/domains/roadmap/CMakeLists.txt
+++ b/domains/roadmap/CMakeLists.txt
@@ -7,3 +7,12 @@ add_executable (roadmap
   roadmap.cc)
 
 target_link_libraries (roadmap LINK_PUBLIC ksearch)
+
+add_executable (gen-roadmap
+  getopt1.c
+  getopt.c
+  graph_t.cc
+  roadmap_t.cc
+  generator.cc)
+
+target_link_libraries (gen-roadmap LINK_PUBLIC ksearch)
