Random generator for the N-Pancake problem

--- a/domains/n-pancake/CMakeLists.txt
+++ b/domains/n-pancake/CMakeLists.txt
@@ -6,3 +6,12 @@ add_executable (npancake
   npancake.cc)
 
 target_link_libraries (npancake LINK_PUBLIC ksearch)
+
+add_executable (gen-npancake
+  getopt1.c
+  getopt.c
+  ../helpers.cc
+  npancake_t.cc
+  generator.cc)
+
+target_link_libraries (npancake LINK_PUBLIC ksearch)
