Sliding-tile puzzle added

--- a/domains/CMakeLists.txt
+++ b/domains/CMakeLists.txt
@@ -1,5 +1,6 @@
 # go into each domain
 add_subdirectory (grid)
+add_subdirectory (maps)
+add_subdirectory (n-puzzle)
 add_subdirectory (n-pancake)
 add_subdirectory (roadmap)
-add_subdirectory (maps)
