Generator of random instances for the N-Puzzle

--- a/domains/n-puzzle/CMakeLists.txt
+++ b/domains/n-puzzle/CMakeLists.txt
@@ -6,3 +6,12 @@ add_executable (npuzzle
   npuzzle.cc)
 
 target_link_libraries (npuzzle LINK_PUBLIC ksearch)
+
+add_executable (gen-npuzzle
+  getopt1.c
+  getopt.c
+  ../helpers.cc
+  npuzzle_t.cc
+  generator.cc)
+
+target_link_libraries (npuzzle LINK_PUBLIC ksearch)
