Incomplete changes to cmake which allow the project to compile on windows, automatically disable tests when GTest is not available, and download test files at the behest of the user.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,8 +15,12 @@ add_subdirectory (domains)
 
 # add the tests only in case they have not been disabled
 if (NOT DISABLE_TESTS)
-    message(STATUS "Tests enabled")
     add_subdirectory (tests)
 else()
     message(STATUS "Tests disabled")
+endif()
+
+# print message warning that memory detection will not work on non-unix systems
+if (NOT UNIX)
+    message(NOTICE "Memory usage detection will not work on non-unix systems")
 endif()
