--- a/domains/maps/CMakeLists.txt
+++ b/domains/maps/CMakeLists.txt
@@ -11,6 +11,6 @@ add_executable (gen-map
   getopt1.c
   getopt.c
   map_t.cc
-  generator.cc)
+  generator.cc //cse-server1/UDfiles/iherman/Documents/CLionProjects/libksearch/domains/roadmap/roadmap.cc)
 
 target_link_libraries (gen-map LINK_PUBLIC ksearch)
