--- a/domains/roadmap/benchmark/CMakeLists.txt
+++ b/domains/roadmap/benchmark/CMakeLists.txt
@@ -28,19 +28,17 @@
 # un-gzips SOURCE into DESTINATION
 # This does not create a target to force DESTINATION to be built, use add_custom_target to do that.
 
-if (WIN32)
-
 #figure out which ungz command to use
 find_program(GUNZIP_LOCATION gunzip DOC "Path to gunzip program. Set either this one, GZIP_LOCATION, or 7Z_LOCATION to build amber.")
 find_program(GZIP_LOCATION gzip DOC "Path to gzip program. Set either this one, GUNZIP_LOCATION, or 7Z_LOCATION to build amber.")
-find_program(7Z_LOCATION 7z 7za DOC "Path to the (p)7-zip command line program, either 7z or 7za. Set either this one, GZIP_LOCATION, or GUNZIP_LOCATION to build amber.")
+find_program(7Z_LOCATION 7z 7za 7-Zip/7z.exe PATHS ENV PROGRAMFILES DOC "Path to the (p)7-zip command line program, either 7z or 7za. Set either this one, GZIP_LOCATION, or GUNZIP_LOCATION to build amber.")
 
 if(GZIP_LOCATION)
     set(UNZIP_COMMAND ${GZIP_LOCATION} -dc)
 elseif(GUNZIP_LOCATION)
     set(UNZIP_COMMAND ${GUNZIP_LOCATION} -c)
 elseif(7Z_LOCATION)
-    set(UNZIP_COMMAND ${7Z_LOCATION} -x -so)
+    set(UNZIP_COMMAND ${7Z_LOCATION} e -so)
 else()
     #cause the searches to be repeated
     unset(GZIP_LOCATION CACHE)
@@ -48,22 +46,16 @@ else()
     unset(7Z_LOCATION CACHE)
 
     if(WIN32)
-        message(SEND_ERROR "A gzip unarchiver is required to build AMBER, but was not found.  Please install gzip or 7-zip and set GZIP_LOCATION, GUNZIP_LOCATION, or 7Z_LOCATION to the gzip or 7z executable.")
+        message(FATAL_ERROR "A gzip unarchiver is required to build AMBER, but was not found.  Please install gzip or 7-zip and set GZIP_LOCATION, GUNZIP_LOCATION, or 7Z_LOCATION to the gzip or 7z executable.")
     else()
-        message(SEND_ERROR "A gzip unarchiver is required to build AMBER, but was not found.  Please install gzip, gunzip, or p7zip.")
+        message(FATAL_ERROR "A gzip unarchiver is required to build AMBER, but was not found.  Please install gzip, gunzip, or p7zip.")
     endif()
 endif()
 
 #message(STATUS "Un-gzip command: ${UNZIP_COMMAND}")
 
 macro(ungzip_file SOURCE DESTINATION)
-
-    add_custom_command(
-            OUTPUT ${DESTINATION}
-            COMMAND ${UNZIP_COMMAND} ${SOURCE} > ${DESTINATION}
-            DEPENDS ${ZIPPED_DATAFILE}
-            VERBATIM)
-
+    execute_process(COMMAND ${UNZIP_COMMAND} ${SOURCE} > ${DESTINATION})
 endmacro(ungzip_file)
 
 
@@ -71,20 +63,20 @@ option(DATA_ALL "Download all DIMACS data files")
 
 function(download_data AREA)
     option(DATA_${AREA} "Download DIMACS data for area: ${AREA}")
-    if(DATA_${AREA} OR DATA_ALL)
+    if (DATA_${AREA} OR DATA_ALL)
         # If graph file doesn't exist, download and extract it
         if (NOT EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/USA-road-d.${AREA}.gr")
             message(STATUS "Downloading ${AREA} graph file")
-            file(DOWNLOAD "http://www.diag.uniroma1.it/~challenge9/data/USA-road-d/USA-road-d.${AREA}.gr.gz" tmp SHOW_PROGRESS)
-            ungzip_file(tmp ${CMAKE_CURRENT_SOURCE_DIR})
-        endif()
+            file(DOWNLOAD "http://www.diag.uniroma1.it/~challenge9/data/USA-road-d/USA-road-d.${AREA}.gr.gz" tmp.gz SHOW_PROGRESS)
+            ungzip_file(tmp.gz ${CMAKE_CURRENT_SOURCE_DIR}/USA-road-d.${AREA}.gr)
+        endif ()
         # If coordinate file doesn't exist, download and extract it
         if (NOT EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/USA-road-d.${AREA}.co")
             message(STATUS "Downloading ${AREA} coordinate file")
-            file(DOWNLOAD "http://www.diag.uniroma1.it/~challenge9/data/USA-road-d/USA-road-d.${AREA}.co.gz" tmp SHOW_PROGRESS)
-            ungzip_file(tmp ${CMAKE_CURRENT_SOURCE_DIR})
-        endif()
-    endif()
+            file(DOWNLOAD "http://www.diag.uniroma1.it/~challenge9/data/USA-road-d/USA-road-d.${AREA}.co.gz" tmp.gz SHOW_PROGRESS)
+            ungzip_file(tmp.gz ${CMAKE_CURRENT_SOURCE_DIR}/USA-road-d.${AREA}.co)
+        endif ()
+    endif ()
 endfunction()
 
 download_data("USA")
