I added some code which stops the checks for an unzip software if the user doesn't want to download data files; I also changed the C++ standard version to C++20 as I believe domains/helpers.cc:36 relies on it

--- a/domains/roadmap/benchmark/CMakeLists.txt
+++ b/domains/roadmap/benchmark/CMakeLists.txt
@@ -1,5 +1,11 @@
 # This file allows test data to be downloaded at CMake config time
 
+# We can return from this file if no downloads were requested
+get_cmake_property(variable_names VARIABLES)
+string (REGEX MATCHALL "(^|;)DATA_[A-Za-z0-9_]*" matched_variables "${variable_names}")
+if (NOT matched_variables)
+    return()
+endif ()
 
 # The following defines a macro for unzipping .gz files from https://github.com/Amber-MD/cmake-buildscripts
 #MIT License
